[package]
name = "batteries"
version = "0.2.0"
edition = "2021"

[dependencies]
zbus = "5.1.1"
zvariant = "5.1.0"
tabled = "0.17.0" 
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] } 
toml = "0.8.19"  # For parsing TOML files
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.133"